@@ -1,0 +1,7 @@
+#!/bin/bash
+
+# This is an example fsscript for use with the livecd-stage2 target (key livecd/fsscript)
+# Basically, this file is copied to the livecd rootfs at livecd creation time and then run
+
+# Example, I want to add specific nameservers to the LiveCD's resolv.conf:
+echo "192.168.0.1" >> /etc/resolv.conf
