@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.84 2004/09/16 05:53:50 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.85 2004/09/29 01:32:50 zhen Exp $
+
+  28 Sep 2004; John Davis <zhen@gentoo.org> TODO,
+  +examples/fsscript.sh.example, examples/livecd-stage2_template.spec,
+  livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
+  modules/livecd_stage2_target.py:
+  udev support for livecds
 
   16 Sep 2004; John Davis <zhen@gentoo.org> modules/catalyst_support.py,
   +targets/livecd-stage2/unmerge.sh:
